<?xml version="1.0" encoding="utf-8"?>

<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/swipe_layout"
    android:layout_height="wrap_content"
    android:paddingTop="25dp"
    app:dragEdge="right"
    app:mode="same_level">    <!--Swipe Layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_remove_person"
        android:layout_width="51dp"
        android:layout_height="match_parent"
        android:background="@color/danger_red">

        <TextView
            android:id="@+id/tv_remove"
            style="@style/ButtonTextSPFR16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="67dp"
            android:gravity="center"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/person_card_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="3dp"
            app:cardBackgroundColor="@color/default_white"
            app:cardCornerRadius="8dp"
            app:cardElevation="7dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="21dp"
                android:layout_marginBottom="5dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/person_name_surname_textview"
                    style="@style/CardViewTextRM14"
                    android:layout_width="wrap_content"
                    android:text="Alper Büyük" />

                <ImageView
                    android:layerType="software"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart=".5dp"
                    android:layout_marginTop="12.5dp"
                    android:layout_marginEnd=".5dp"
                    android:src="@drawable/card_divider" />

                <LinearLayout
                    style="@style/StylePersonCardItemLayout"
                    android:layout_marginTop="14.5dp">
                    <TextView
                        style="@style/CardViewTextHeaderRR12"
                        android:text="@string/birth_date"
                        />
                    <TextView
                        android:id="@+id/person_birth_date_textview"
                        style="@style/CardViewTextRM14"
                        android:layout_marginStart="0dp"
                        android:text="@string/sample_birhtday_text"
                        />


                </LinearLayout>

                <LinearLayout
                    style="@style/StylePersonCardItemLayout">
                    <TextView
                        style="@style/CardViewTextHeaderRR12"
                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/person_email_textview"
                        style="@style/CardViewTextRM14"

                        android:text="@string/sample_email_text"
                        />

                </LinearLayout>

                <LinearLayout
                    style="@style/StylePersonCardItemLayout"
                    android:layout_marginBottom="15dp">
                    <TextView
                        style="@style/CardViewTextHeaderRR12"
                        android:text="@string/phone_number"
                        />
                    <TextView
                        android:id="@+id/person_phone_number_textview"
                        style="@style/CardViewTextRM14"
                        android:text="@string/sample_phone_number_text"
                        />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</com.chauthai.swipereveallayout.SwipeRevealLayout>