<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:focusableInTouchMode="true"

    tools:context=".Activities.AddOrEditPersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="-79dp"

            >
            <ImageView
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:src="@drawable/activity_top_background"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                style="@style/ActivityHeaderRM30"
                android:layout_marginBottom="27dp"
                android:text="@string/add_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RelativeLayout
                android:id="@+id/btn_turn_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="29dp"
                android:background="@drawable/action_icons_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/left_arrow_icon" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                style="@style/StyleInputLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edittext"
                    style="@style/StyleTextWitBackgroundRM14"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_input_layout"
                style="@style/StyleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_edittext"
                    style="@style/StyleTextWitBackgroundRM14"
                    android:hint="@string/surname"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday_input_layout"
                style="@style/StyleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthday_edittext"
                    style="@style/StyleTextWitBackgroundRM14"

                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/birth_date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/StyleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edittext"
                    style="@style/StyleTextWitBackgroundRM14"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/number_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/main_input_background"
                android:orientation="vertical"
                android:paddingStart="15dp"

                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/title_phone_number"
                    style="@style/CardViewTextHeaderRR12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="0"
                    android:text="@string/phone_number"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <Spinner
                        android:id="@+id/spinner_phone_number"
                        style="@style/SpinnerTheme"
                        android:layout_width="55dp"

                        android:layout_height="match_parent" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="6dp"
                        android:background="@color/default_gray_soft" />

                    <EditText
                        android:id="@+id/number_edittext"
                        style="@style/StyleTextWitBackgroundRM14"
                        android:layout_height="match_parent"
                        android:layout_marginStart="9.5dp"
                        android:background="@null"
                        android:inputType="phone" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/errorTextPhoneLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/default_red"
                android:textSize="12sp"
                android:lineSpacingExtra="2sp"
                android:visibility="invisible" />


            <EditText
                android:id="@+id/note_edittext"
                style="@style/CardViewTextHeaderRR12"
                android:layout_width="match_parent"
                android:background="@drawable/main_input_background"
                android:layout_height="133dp"
                android:layout_marginTop="4dp"
                android:gravity="top"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                android:paddingStart="15dp"
                android:paddingTop="12dp"
                android:maxLength="100"
                android:paddingEnd="15dp"
                android:paddingBottom="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_add_person"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="74dp"
                android:paddingTop="1dp"
                android:layout_marginBottom="29dp"
                app:backgroundTint="@null"
                style="@style/StyleAddPersonButtonStyle"
                />


        </LinearLayout>
    </LinearLayout>

</ScrollView>